# calc

./: CMakeLists.txt  libs.cpp  libs.h  main.cpp
test/: CMakeLists.txt  UnitTests.cpp
